# pidem

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LOVABLE.md  PRD.md  README.md  docker-compose.yml  spec.md
backend/: config.py  main.py  pyproject.toml
backend/data/: cache.py  generator.py  ingest.py  ingest_to_db.py  schemas.py
backend/data/raw/: brent_crude.csv  mendeley_daily.csv  stations.csv  weather.csv
backend/models/: __init__.py  anomaly.py  bandit.py  classification.py  clustering.py  ft_transformer.py  mlp.py  optimization.py  regression.py  rl_dqn.py  rl_tabular.py  timeseries.py
backend/routers/: bandit.py  classification.py  clustering.py  data.py  eda.py  modules.py  neural.py  optimization.py  regression.py  rl.py  timeseries.py
backend/services/: fine_tune.py  llm_client.py  llm_finetuned.py  rag_pipeline.py  run_manager.py
backend/tests/: test_smoke.py
backend/training_data/: pricing_qa.jsonl
backend/utils/: chart_helpers.py  metrics.py  shap_helpers.py
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: hub.spec.ts  llm-graceful.spec.ts  m00-foundations.spec.ts  m01-regression.spec.ts  m04-clustering.spec.ts  navigation.spec.ts  responsive.spec.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/modules/m00-foundations/: page.tsx
frontend/src/app/modules/m01-regression/: page.tsx
frontend/src/app/modules/m02-classification/: page.tsx
frontend/src/app/modules/m03-ensembles/: page.tsx
frontend/src/app/modules/m04-clustering/: page.tsx
frontend/src/app/modules/m05-anomaly/: page.tsx
frontend/src/app/modules/m06-timeseries/: page.tsx
frontend/src/app/modules/m07-sequence/: page.tsx
frontend/src/app/modules/m08-tft/: page.tsx
frontend/src/app/modules/m09-optimization/: page.tsx
frontend/src/app/modules/m10-bandits/: page.tsx
frontend/src/app/modules/m11-qlearning/: page.tsx
frontend/src/app/modules/m12-dqn/: page.tsx
frontend/src/app/modules/m13-neural/: page.tsx
frontend/src/app/modules/m14-ft-transformer/: page.tsx
frontend/src/app/modules/m15-transformer-zoo/: page.tsx
frontend/src/components/: assessment.tsx  chapter-header.tsx  chapter-nav.tsx  chart-panel.tsx  control-panel.tsx  guided-insight.tsx  metric-cards.tsx  module-layout.tsx  navbar.tsx  story-card.tsx  story-section.tsx  training-status.tsx
frontend/src/hooks/: use-async-training.ts  use-model-results.ts  use-training-runner.ts
frontend/src/lib/: api-client.ts  store.ts
frontend/src/types/: react-plotly.d.ts
nim/: README.md
scripts/: build_rag_index.sh  download_data.sh  fine_tune.sh  git-acp.sh  push_with_token.sh
(+3 files in other folders)
